<resources>
    <string name="app_name">Inove Park</string>
    <string name="google_maps_key">AIzaSyD6Op-1lwFXRSJZfeALO9kNHu1gdsbD-9s</string>
    <string name="title_home">Home</string>
    <string name="title_map">Mapa</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">senha</string>
    <string name="login">Entrar</string>
    <string name="park">Estacionar</string>
    <string name="e_mail">e-mail</string>
    <string name="register">Cadastrar</string>
    <string name="success_register">Cadastrado com sucesso</string>
    <string name="salvar">Salvar</string>
    <string name="phone">Telefone</string>
    <string name="name">Nome</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="invalid_value">"Valor inválido"</string>
    <string name="required_field">"Campo obrigatório"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Mapa</string>
    <string name="menu_wallet">Carteira</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="balance">Saldo:</string>
    <string name="history">Histórico</string>
    <string name="finish">Finalizar</string>
    <string name="begin">Iniciar</string>
    <string name="cost">Custo:</string>
    <string name="total">Total:</string>
    <string name="add_balance">Add Saldo</string>
    <string name="transfer">Transferência</string>
</resources>
