<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="br.com.inove_park_app.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="br.com.inove_park_app.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" >
        <action
            android:id="@+id/action_nav_wallet_to_transferFragment"
            app:destination="@id/nav_transfer" />
    </fragment>

    <fragment
        android:id="@+id/nav_transfer"
        android:name="br.com.inove_park_app.ui.transfer.TransferFragment"
        android:label="@string/transfer"
        tools:layout="@layout/fragment_transfer"/>
</navigation>